[package]
name = "Centennial-BT"
version = "0.1.0"
authors = ["artem <artkulak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serialport = "3.3.0"
libudev-sys = "0.1.4"
cobs = "0.1.4"
bluetooth-serial-port = "0.6.0"
mio = "0.6"
byteorder = "1.3.2"
csv = "1.1.5"
mio-serial = "3.3.1"
confy = "0.4.0"
